upsert does not handle DuplicateKey retry correctly

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 7.0.22, 6.0.25, 8.0.12
    • Affects Version/s: 5.0.0, 6.0.0, 7.0.0, 8.0.0
    • Component/s: None
    • None
    • Query Execution
    • Minor Change
    • ALL
    • v8.0, v7.0, v6.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When write_ops_exec::shouldRetryDuplicateKeyException() returns true, we retry findAndModify on DuplicateKey. I think the assumption is that the document didn't exist before the command starts. However, this assumption is false when the unique index is partial.

            Assignee:
            Evan Bergeron
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            20 Start watching this issue

              Created:
              Updated:
              Resolved: