SERVER-95523 upsert does not handle DuplicateKey retry correctly (#28489)

GitOrigin-RevId: 13daec89db1c27b57c5e1b085fe391c70676e146